Versão atualizada do site
Versão atualizada no dia 20 de maio de 2022

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-msedge",
+            "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
             "file": "d:\\DEV\\Projetos\\website\\index.html"
